<resources>
    <string name="app_name">college_canteen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_slogin">Slogin</string>
    <string name="title_activity_logins">logins</string>
    <string name="uid">User id</string>
    <string name="uname">User name</string>
    <string name="phone">Phone no.</string>
    <string name="mail">E-mail id</string>
    <string name="pass">Password</string>
    <string name="balane">balance</string>
    <string name="iid">Item id</string>
    <string name="iname">Item name</string>
    <string name="price">Price</string>
    <string name="addi" />
    <string name="menu">"   "</string>
</resources>